--- a/.github/workflows/Docs.yaml
+++ b/.github/workflows/Docs.yaml
@@ -7,11 +7,10 @@ concurrency:
   group: ci-${{ github.repository }}
   cancel-in-progress: true
 
-if: github.repository_owner == 'jakobandersen'
 
 jobs:
   develop-docs:
-    if: github.ref == 'refs/heads/develop'
+    if: github.repository_owner == 'jakobandersen' && github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,7 +24,7 @@ jobs:
           folder: docs
           clean-exclude: docs
   release-docs:
-    if: startsWith(github.event.ref, 'refs/tags/v')'
+    if: github.repository_owner == 'jakobandersen' && startsWith(github.event.ref, 'refs/tags/v')'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
