--- a/.github/workflows/Docs.yaml
+++ b/.github/workflows/Docs.yaml
@@ -1,12 +1,13 @@
 name: Docs
 
+on: push
+
 permissions:
   contents: write
 
 concurrency:
   group: ci-${{ github.repository }}
   cancel-in-progress: true
-
 
 jobs:
   develop-docs:
