--- a/.github/workflows/Docs.yaml
+++ b/.github/workflows/Docs.yaml
@@ -29,7 +29,7 @@ jobs:
         with:
           folder: docs
           clean-exclude: docs
-          commit-message: Updating develop docs from ${{ github.sha }}
+          commit-message: Update develop docs from ${{ github.sha }}
   release-docs:
     if: github.repository_owner == 'jakobandersen' && startsWith(github.event.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
@@ -44,4 +44,4 @@ jobs:
         with:
           folder: docs
           target-folder: docs/${{github.ref_name}}
-          commit-message: Creating release docs for ${{github.ref_name}}
+          commit-message: Create release docs for ${{github.ref_name}}
